<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    >
    <Toolbar
        android:layout_gravity="top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purple_700"
        android:layout_marginBottom="100dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="18dp">
            <ImageView
                android:id="@+id/button_back"
                android:layout_width="26dp"
                android:layout_height="26dp"
                android:src="@drawable/ic_back"
                android:layout_marginStart="5dp"
                app:tint="@color/white"/>
        </LinearLayout>
    </Toolbar>
    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/image_display_picture"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginBottom="20dp"
        android:src="@mipmap/ic_launcher"/>
    <TextView
        android:id="@+id/text_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_name_placeholder"
        android:textStyle="bold"
        android:textSize="24sp"/>
    <TextView
        android:id="@+id/text_realname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_name_placeholder"
        android:textSize="17sp"
        android:layout_marginBottom="20dp"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    </LinearLayout>
    <LinearLayout
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">
        <ImageView
            android:layout_width="18dp"
            android:layout_height="19dp"
            android:src="@drawable/ic_followers"
            android:layout_marginEnd="3dp"/>
        <TextView
            android:id="@+id/text_replaceable_followers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="3dp"
            android:text="@string/text_number_placeholder"
            android:textStyle="bold"
            android:textSize="14sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_followers"
            android:textSize="14sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:text="@string/text_dot"
            android:textSize="14sp"/>
        <TextView
            android:id="@+id/text_replaceable_following"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="3dp"
            android:text="@string/text_number_placeholder"
            android:textStyle="bold"
            android:textSize="14sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_following"
            android:textSize="14sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:text="@string/text_dot"
            android:textSize="14sp"/>
        <TextView
            android:id="@+id/text_replaceable_repositories"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="3dp"
            android:text="@string/text_number_placeholder"
            android:textStyle="bold"
            android:textSize="14sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_repositories"
            android:textSize="14sp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">
        <ImageView
            android:layout_width="18dp"
            android:layout_height="19dp"
            android:src="@drawable/ic_location_pin"
            android:layout_marginEnd="3dp"/>

        <TextView
            android:id="@+id/text_replaceable_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_location_placeholder"
            android:textSize="14sp"
            android:textStyle="bold"/>
    </LinearLayout>
    <LinearLayout
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginBottom="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:text="@string/text_works_at"
            android:layout_marginEnd="3dp"
            android:textSize="14sp"/>

        <TextView
            android:id="@+id/text_replaceable_company"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxWidth="300dp"
            android:text="@string/text_company_name_placeholder"
            android:textSize="14sp"
            android:textStyle="bold" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginBottom="20dp">
        <Button
            android:id="@+id/button_go"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_visit_github"
            android:layout_margin="5dp"/>
        <Button
            android:id="@+id/button_share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_share"
            android:layout_margin="5dp"/>
    </LinearLayout>
</LinearLayout>