<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutActivity"
    android:gravity="center_horizontal"
    android:orientation="vertical">
    <Toolbar
        android:layout_gravity="top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purple_700"
        android:layout_marginBottom="100dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="18dp">
            <ImageView
                android:id="@+id/button_back"
                android:layout_width="26dp"
                android:layout_height="26dp"
                android:src="@drawable/ic_back"
                android:layout_marginStart="5dp"
                app:tint="@color/white"/>
        </LinearLayout>
    </Toolbar>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/aboutMe_about_me"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:textSize="30sp"
        android:layout_marginBottom="10dp"/>
    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/about_me_picture"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/aboutMe_name"
        android:textSize="30sp"
        android:layout_marginTop="10dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/aboutMe_mail"
        android:textSize="17sp"
        android:layout_marginTop="10dp"/>
    <Button
        android:id="@+id/button_git_hub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/text_visit_github" />
</LinearLayout>